[gd_scene load_steps=7 format=3 uid="uid://di5dhei514os3"]

[ext_resource type="Texture2D" uid="uid://byghjw4gxf8rv" path="res://Interface.png" id="1_672yr"]
[ext_resource type="Script" path="res://configuração.gd" id="1_y8jyr"]
[ext_resource type="AudioStream" uid="uid://dnm0cb5cy1hut" path="res://sounds/grecia-120640 (online-audio-converter.com).ogg" id="3_55nli"]
[ext_resource type="Texture2D" uid="uid://i8m07gbq2pim" path="res://som.png" id="3_l3rh1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wi00"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stp6t"]
bg_color = Color(0.176471, 0.694118, 0.552941, 1)

[node name="configuração" type="Node2D"]
script = ExtResource("1_y8jyr")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5wi00")

[node name="Interface" type="Sprite2D" parent="Panel"]
position = Vector2(575, 324)
scale = Vector2(0.601042, 0.6)
texture = ExtResource("1_672yr")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -33.5
offset_right = 75.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar
"

[node name="HSlider" type="HSlider" parent="Panel"]
layout_mode = 2
offset_left = 427.0
offset_top = 449.0
offset_right = 733.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_stp6t")
min_value = -30.0
max_value = 24.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("3_55nli")

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 535.0
offset_top = 369.0
offset_right = 623.0
offset_bottom = 423.0
icon = ExtResource("3_l3rh1")
flat = true

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Panel/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
